--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "dependencies": {
-    "autoprefixer": "^6.3.6",
     "ava": "^0.15.2",
     "babel-core": "~6.10.4",
     "babel-eslint": "^6.0.4",
@@ -14,36 +13,43 @@
     "babel-preset-es2015": "~6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "~6.5.0",
-    "babel-pundle": "^1.0.0",
+    "babel-pundle": "^1.1.3",
     "babel-register": "^6.9.0",
     "classnames": "^2.2.5",
+    "debug": "^2.2.0",
     "enzyme": "^2.3.0",
     "eslint": "^2.12.0",
     "eslint-config-standard": "~5.3.1",
-    "eslint-loader": "^1.3.0",
     "eslint-plugin-ava": "^2.5.0",
+    "eslint-plugin-import": "^1.12.0",
     "eslint-plugin-promise": "^1.3.2",
     "eslint-plugin-react": "^5.2.2",
     "eslint-plugin-standard": "~1.3.2",
-    "json-loader": "^0.5.4",
+    "firebase": "^3.3.0",
+    "glamor": "^2.2.6",
+    "history": "^3.0.0",
+    "lodash.debounce": "^4.0.7",
+    "mkdirp": "^0.5.1",
     "nock": "^8.0.0",
-    "postcss": "^5.0.21",
-    "postcss-color-function": "^2.0.1",
-    "postcss-flexbugs-fixes": "^2.0.0",
-    "postcss-import": "8.1.0",
-    "postcss-scss": "^0.1.8",
-    "precss": "^1.4.0",
-    "pundle-dev": "^1.0.0",
-    "react": "^15.1.0",
-    "react-addons-test-utils": "^15.1.0",
-    "react-dom": "^15.1.0",
+    "process-bootstrap": "^1.0.0",
+    "pundle": "^1.1.5",
+    "pundle-dev": "^1.1.5",
+    "react": "^15.3.1",
+    "react-addons-test-utils": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-redux": "^4.4.5",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "~1.2.2",
+    "redux": "^3.5.2",
+    "redux-action": "^1.0.0",
+    "redux-logger": "^2.6.1",
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.1.0",
     "rewire": "~2.5.1",
+    "rimraf": "^2.5.4",
     "sinon": "^1.17.4",
-    "stylelint": "^6.6.0",
-    "stylelint-config-standard": "^9.0.0"
+    "uglify-js": "^2.7.3"
   },
   "name": "jour",
   "version": "1.0.0",
@@ -51,7 +57,11 @@
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
-    "start": "node ./dev-server.js",
+    "start": "NODE_ENV=development node ./start.js",
+    "build": "npm run bundle && npm run uglify && npm run copy-assets",
+    "bundle": "NODE_ENV=production node ./build.js",
+    "copy-assets": "cp -r assets/ ./build",
+    "uglify": "./node_modules/.bin/uglifyjs build/bundle.js -c warnings=false -m --screw-ie8 -o build/bundle.js",
     "test": "ava"
   },
   "keywords": [
