--- a/.eslintrc
+++ b/.eslintrc
@@ -104,8 +104,7 @@
     "import/no-named-as-default-member": 1,
     "import/no-named-as-default": 1,
     "react/display-name": 1,
-    "react/no-deprecated": [1, {"react": "0.14.0"}],
-    "react/no-did-mount-set-state": [1, "allow-in-func"],
+    "react/no-did-mount-set-state": 1,
     "react/no-did-update-set-state": 1,
     "react/no-direct-mutation-state": 2,
     "react/no-multi-comp": 2,
