--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "ava": "^0.15.2",
     "babel-core": "~6.10.4",
-    "babel-eslint": "^6.0.4",
+    "babel-eslint": "^6.1.2",
     "babel-plugin-react-transform": "~2.0.0",
     "babel-plugin-rewire": "^1.0.0-rc-3",
     "babel-plugin-syntax-object-rest-spread": "~6.8.0",
@@ -18,13 +18,13 @@
     "classnames": "^2.2.5",
     "debug": "^2.2.0",
     "enzyme": "^2.3.0",
-    "eslint": "^2.12.0",
-    "eslint-config-standard": "~5.3.1",
+    "eslint": "^3.5.0",
+    "eslint-config-standard": "^6.0.1",
     "eslint-plugin-ava": "^2.5.0",
-    "eslint-plugin-import": "^1.12.0",
-    "eslint-plugin-promise": "^1.3.2",
-    "eslint-plugin-react": "^5.2.2",
-    "eslint-plugin-standard": "~1.3.2",
+    "eslint-plugin-import": "^1.15.0",
+    "eslint-plugin-promise": "^2.0.1",
+    "eslint-plugin-react": "^6.2.2",
+    "eslint-plugin-standard": "^2.0.0",
     "firebase": "^3.3.0",
     "glamor": "^2.2.6",
     "history": "^3.0.0",
@@ -37,6 +37,9 @@
     "react": "^15.3.1",
     "react-addons-test-utils": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-native": "0.33.0",
+    "react-native-facebook-login": "^1.4.0",
+    "react-native-firestack": "^2.2.3",
     "react-redux": "^4.4.5",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
@@ -57,8 +60,9 @@
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
-    "start": "NODE_ENV=development node ./start.js",
-    "bundle": "NODE_ENV=production node ./build.js",
+    "start-native": "node node_modules/react-native/local-cli/cli.js start",
+    "start": "NODE_ENV=development node ./start-web.js",
+    "bundle": "NODE_ENV=production node ./build-web.js",
     "copy-assets": "cp -r assets/ ./build",
     "uglify": "./node_modules/.bin/uglifyjs build/bundle.js -c warnings=false -m --screw-ie8 -o build/bundle.js",
     "build": "npm run bundle && npm run uglify && npm run copy-assets",
